// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > generates only trait artifact when mixin has only data fields > data-only trait type interface 1`] = `
"import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { User } from 'test-app/data/resources/user.schema';

const SimpleTraitSchema = {
  'name': 'simple',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'title',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'author',
      'kind': 'belongsTo',
      'type': 'user',
      'options': {
        'async': true
      }
    }
  ]
} satisfies LegacyResourceSchema;

export default SimpleTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'simple' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Simple} for fields + legacy mode features
 */
export interface SimpleTrait {
  title?: string | null;
  author?: Promise<User>;
}

/**
 * This type represents the full set schema derived fields of
 * the 'simple' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link SimpleTrait} for fields + legacy mode features
 */
export interface Simple extends WithLegacy<SimpleTrait> {}
"
`;

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > generates trait and extension artifacts when mixin has computed properties and methods > mixin extension code 1`] = `
"

import { computed } from '@ember/object';

export const NameableTraitExtension = {
  displayName: computed('name', function() {
		return \`Name: \${this.name}\`;
	}),
  getName() {
		return this.name || 'Unknown';
	}
};"
`;

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > generates trait and extension artifacts when mixin has computed properties and methods > mixin trait type interface 1`] = `
"import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

const NameableTraitSchema = {
  'name': 'nameable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default NameableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'nameable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Nameable} for fields + legacy mode features
 */
export interface NameableTrait {
  name?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'nameable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link NameableTrait} for fields + legacy mode features
 */
export interface Nameable extends WithLegacy<NameableTrait> {}
"
`;

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > generates trait artifact with merged types for basic mixins > basic trait type interface 1`] = `
"import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { HasMany } from '@ember-data/model';
import type { File } from 'test-app/data/resources/file.schema';

const FileableTraitSchema = {
  'name': 'fileable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file',
      'options': {
        'as': 'fileable',
        'async': false
      }
    },
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'isActive',
      'kind': 'attribute',
      'type': 'boolean',
      'options': {
        'defaultValue': false
      }
    }
  ]
} satisfies LegacyResourceSchema;

export default FileableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'fileable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Fileable} for fields + legacy mode features
 */
export interface FileableTrait {
  files?: HasMany<File>;
  name?: string | null;
  isActive?: boolean | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'fileable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link FileableTrait} for fields + legacy mode features
 */
export interface Fileable extends WithLegacy<FileableTrait> {}
"
`;

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > handles custom type mappings in mixin trait type interfaces > mixin custom type mappings interface 1`] = `
"import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

const TypedTraitSchema = {
  'name': 'typed',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'id',
      'kind': 'attribute',
      'type': 'uuid'
    },
    {
      'name': 'amount',
      'kind': 'attribute',
      'type': 'currency'
    },
    {
      'name': 'metadata',
      'kind': 'attribute',
      'type': 'json'
    }
  ]
} satisfies LegacyResourceSchema;

export default TypedTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'typed' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Typed} for fields + legacy mode features
 */
export interface TypedTrait {
  id?: string | null;
  amount?: number | null;
  metadata?: Record<string, unknown> | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'typed' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TypedTrait} for fields + legacy mode features
 */
export interface Typed extends WithLegacy<TypedTrait> {}
"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > collects the real fileable mixin shape into trait and extension artifacts > artifact metadata 1`] = `
[
  {
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "name": "FileableTraitSchema",
    "suggestedFileName": "fileable.schema.ts",
    "type": "trait",
  },
  {
    "name": "FileableTraitExtension",
    "suggestedFileName": "fileable.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > collects the real fileable mixin shape into trait and extension artifacts > extension code 1`] = `
"import { computed } from '@ember/object';
import { readOnly } from '@ember/object/computed';


import { arrayHasLength } from '@auditboard/client-core/core/computed-extensions';


import { sortBy } from 'soxhub-client/utils/sort-by';

export const FileableTraitExtension = {
  sortedFiles: sortBy('files', 'createdAt:desc'),
  hasFiles: arrayHasLength('files'),
  numFiles: readOnly('files.length'),
  filesRequiringReview: computed('files.@each.status', function () {
		return this.files.filter((file) => !file.isReviewed);
	}),
  hasFilesRequiringReview: arrayHasLength('filesRequiringReview'),
  numFilesRequiringReview: readOnly('filesRequiringReview.length'),
  hasDuplicateFileName(file) {
		return Boolean(this.files.find((fileRecord) => fileRecord.name === file.name));
	}
};"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > collects the real fileable mixin shape into trait and extension artifacts > trait code 1`] = `
"import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { HasMany } from '@ember-data/model';
import type { File } from 'test-app/data/resources/file.schema';

const FileableTraitSchema = {
  'name': 'fileable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file',
      'options': {
        'as': 'fileable',
        'async': false,
        'inverse': 'fileable'
      }
    },
    {
      'name': 'showFilesRequiringReviewError',
      'kind': 'attribute',
      'type': 'boolean',
      'options': {
        'defaultValue': false
      }
    }
  ]
} satisfies LegacyResourceSchema;

export default FileableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'fileable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Fileable} for fields + legacy mode features
 */
export interface FileableTrait {
  files?: HasMany<File>;
  showFilesRequiringReviewError?: boolean | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'fileable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link FileableTrait} for fields + legacy mode features
 */
export interface Fileable extends WithLegacy<FileableTrait> {}
"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > converts mixin with no trait fields to extension artifact > code 1`] = `
"
import { computed } from '@ember/object';

export const NoTraitsTraitExtension = {
  complexMethod() { return 'processed'; },
  computedValue: computed(function() { return 'computed'; })
};"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > converts mixin with no trait fields to extension artifact > metadata 1`] = `
[
  {
    "name": "NoTraitsTraitSchema",
    "suggestedFileName": "no-traits.schema.ts",
    "type": "trait",
  },
  {
    "name": "NoTraitsTraitExtension",
    "suggestedFileName": "no-traits.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > preserves newlines and tabs in extension artifact properties without escaping > code 1`] = `
"
import { computed } from '@ember/object';
import { service } from '@ember/service';

export const PlannableTraitExtension = {
  library: service('library'),
  projectPlans: computed('_modelName', 'intId', 'library.projectPlans.[]', function () {
		return this.get('library.projectPlans')
			?.filterBy('plannableType', classify(this._modelName))
			.filterBy('plannableId', this.intId);
	})
};"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > preserves newlines and tabs in extension artifact properties without escaping > metadata 1`] = `
[
  {
    "name": "PlannableTraitSchema",
    "suggestedFileName": "plannable.schema.ts",
    "type": "trait",
  },
  {
    "name": "PlannableTraitExtension",
    "suggestedFileName": "plannable.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > produces a trait artifact if identifier default export is initialized by Mixin.create > code 1`] = `
"// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > produces a trait artifact if identifier default export is initialized by Mixin.create > metadata 1`] = `
[
  {
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "name": "FileableTraitSchema",
    "suggestedFileName": "fileable.schema.ts",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > supports alias of Mixin import and still produces a trait artifact > code 1`] = `
"import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

const AliasedTraitSchema = {
  'name': 'aliased',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default AliasedTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'aliased' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Aliased} for fields + legacy mode features
 */
export interface AliasedTrait {
  name?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'aliased' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AliasedTrait} for fields + legacy mode features
 */
export interface Aliased extends WithLegacy<AliasedTrait> {}
"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > supports alias of Mixin import and still produces a trait artifact > metadata 1`] = `
[
  {
    "name": "AliasedTraitSchema",
    "suggestedFileName": "aliased.schema.ts",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > allows alternate import source via options (trait artifact) 1`] = `
[
  {
    "baseName": "file",
    "code": "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "baseName": "custom-source",
    "code": "import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { HasMany } from '@my-custom/model';
import type { File } from 'test-app/data/resources/file.schema';

const CustomSourceTraitSchema = {
  'name': 'custom-source',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    }
  ]
} satisfies LegacyResourceSchema;

export default CustomSourceTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'custom-source' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link CustomSource} for fields + legacy mode features
 */
export interface CustomSourceTrait {
  name?: string | null;
  files?: HasMany<File>;
}

/**
 * This type represents the full set schema derived fields of
 * the 'custom-source' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link CustomSourceTrait} for fields + legacy mode features
 */
export interface CustomSource extends WithLegacy<CustomSourceTrait> {}
",
    "name": "CustomSourceTraitSchema",
    "suggestedFileName": "custom-source.schema.ts",
    "type": "trait",
  },
  {
    "baseName": "custom-source",
    "code": "

import { computed } from '@ember/object';

export const CustomSourceTraitExtension = {
  customProp: computed('name', function() { return this.name; })
};",
    "name": "CustomSourceTraitExtension",
    "suggestedFileName": "custom-source.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > correctly ignores renamed imports from unsupported sources (only hasMany recognized) 1`] = `
[
  {
    "baseName": "file",
    "code": "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "baseName": "renamed-mixed-sources",
    "code": "import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { HasMany } from '@ember-data/model';
import type { File } from 'test-app/data/resources/file.schema';

const RenamedMixedSourcesTraitSchema = {
  'name': 'renamed-mixed-sources',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    }
  ]
} satisfies LegacyResourceSchema;

export default RenamedMixedSourcesTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'renamed-mixed-sources' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link RenamedMixedSources} for fields + legacy mode features
 */
export interface RenamedMixedSourcesTrait {
  files?: HasMany<File>;
}

/**
 * This type represents the full set schema derived fields of
 * the 'renamed-mixed-sources' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link RenamedMixedSourcesTrait} for fields + legacy mode features
 */
export interface RenamedMixedSources extends WithLegacy<RenamedMixedSourcesTrait> {}
",
    "name": "RenamedMixedSourcesTraitSchema",
    "suggestedFileName": "renamed-mixed-sources.schema.ts",
    "type": "trait",
  },
  {
    "baseName": "renamed-mixed-sources",
    "code": "

import { attr as attribute } from '@unsupported/source';

export const RenamedMixedSourcesTraitExtension = {
  name: attribute('string')
};",
    "name": "RenamedMixedSourcesTraitExtension",
    "suggestedFileName": "renamed-mixed-sources.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > handles CLI option name conversion from kebab-case to camelCase (trait artifact) 1`] = `
[
  {
    "baseName": "cli-option",
    "code": "import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

const CliOptionTraitSchema = {
  'name': 'cli-option',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default CliOptionTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'cli-option' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link CliOption} for fields + legacy mode features
 */
export interface CliOptionTrait {
  name?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'cli-option' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link CliOptionTrait} for fields + legacy mode features
 */
export interface CliOption extends WithLegacy<CliOptionTrait> {}
",
    "name": "CliOptionTraitSchema",
    "suggestedFileName": "cli-option.schema.ts",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > handles aliased imports correctly (trait artifact) 1`] = `
[
  {
    "baseName": "file",
    "code": "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "baseName": "user",
    "code": "// Stub interface for User - generated automatically
// This file will be replaced when the actual resource type is generated

export interface User {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "User",
    "suggestedFileName": "user.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "baseName": "aliased-imports",
    "code": "import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { HasMany } from '@ember-data/model';
import type { File } from 'test-app/data/resources/file.schema';
import type { User } from 'test-app/data/resources/user.schema';

const AliasedImportsTraitSchema = {
  'name': 'aliased-imports',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    },
    {
      'name': 'owner',
      'kind': 'belongsTo',
      'type': 'user'
    }
  ]
} satisfies LegacyResourceSchema;

export default AliasedImportsTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'aliased-imports' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link AliasedImports} for fields + legacy mode features
 */
export interface AliasedImportsTrait {
  name?: string | null;
  files?: HasMany<File>;
  owner?: User | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'aliased-imports' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AliasedImportsTrait} for fields + legacy mode features
 */
export interface AliasedImports extends WithLegacy<AliasedImportsTrait> {}
",
    "name": "AliasedImportsTraitSchema",
    "suggestedFileName": "aliased-imports.schema.ts",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > ignores decorators from unsupported import sources (only attr recognized) 1`] = `
[
  {
    "baseName": "unsupported-source",
    "code": "import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

const UnsupportedSourceTraitSchema = {
  'name': 'unsupported-source',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default UnsupportedSourceTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'unsupported-source' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link UnsupportedSource} for fields + legacy mode features
 */
export interface UnsupportedSourceTrait {
  name?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'unsupported-source' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UnsupportedSourceTrait} for fields + legacy mode features
 */
export interface UnsupportedSource extends WithLegacy<UnsupportedSourceTrait> {}
",
    "name": "UnsupportedSourceTraitSchema",
    "suggestedFileName": "unsupported-source.schema.ts",
    "type": "trait",
  },
  {
    "baseName": "unsupported-source",
    "code": "

import { hasMany } from '@unsupported/source';
import { computed } from '@ember/object';

export const UnsupportedSourceTraitExtension = {
  files: hasMany('file'),
  customProp: computed('name', function() { return this.name; })
};",
    "name": "UnsupportedSourceTraitExtension",
    "suggestedFileName": "unsupported-source.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > only processes decorators from @ember-data/model by default (trait artifact) > artifact types 1`] = `
[
  {
    "name": "File",
    "type": "resource-type-stub",
  },
  {
    "name": "DefaultSourceTraitSchema",
    "type": "trait",
  },
  {
    "name": "DefaultSourceTraitExtension",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > only processes decorators from @ember-data/model by default (trait artifact) > generated code 1`] = `
[
  "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
  "import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { HasMany } from '@ember-data/model';
import type { File } from 'test-app/data/resources/file.schema';

const DefaultSourceTraitSchema = {
  'name': 'default-source',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    }
  ]
} satisfies LegacyResourceSchema;

export default DefaultSourceTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'default-source' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link DefaultSource} for fields + legacy mode features
 */
export interface DefaultSourceTrait {
  name?: string | null;
  files?: HasMany<File>;
}

/**
 * This type represents the full set schema derived fields of
 * the 'default-source' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link DefaultSourceTrait} for fields + legacy mode features
 */
export interface DefaultSource extends WithLegacy<DefaultSourceTrait> {}
",
  "

import { computed } from '@ember/object';

export const DefaultSourceTraitExtension = {
  customProp: computed('name', function() { return this.name; })
};",
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > processes belongsTo decorator correctly (trait artifact) 1`] = `
[
  {
    "baseName": "user",
    "code": "// Stub interface for User - generated automatically
// This file will be replaced when the actual resource type is generated

export interface User {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "User",
    "suggestedFileName": "user.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "baseName": "belongs-to",
    "code": "import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { User } from 'test-app/data/resources/user.schema';

const BelongsToTraitSchema = {
  'name': 'belongs-to',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'owner',
      'kind': 'belongsTo',
      'type': 'user',
      'options': {
        'async': true
      }
    }
  ]
} satisfies LegacyResourceSchema;

export default BelongsToTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'belongs-to' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link BelongsTo} for fields + legacy mode features
 */
export interface BelongsToTrait {
  owner?: Promise<User>;
}

/**
 * This type represents the full set schema derived fields of
 * the 'belongs-to' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link BelongsToTrait} for fields + legacy mode features
 */
export interface BelongsTo extends WithLegacy<BelongsToTrait> {}
",
    "name": "BelongsToTraitSchema",
    "suggestedFileName": "belongs-to.schema.ts",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > produces an extension artifact when no valid EmberData imports are found 1`] = `
[
  {
    "baseName": "no-valid-imports",
    "code": "import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

const NoValidImportsTraitSchema = {
  'name': 'no-valid-imports',
  'mode': 'legacy',
  'fields': []
} satisfies LegacyResourceSchema;

export default NoValidImportsTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'no-valid-imports' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link NoValidImports} for fields + legacy mode features
 */
export interface NoValidImportsTrait {
}

/**
 * This type represents the full set schema derived fields of
 * the 'no-valid-imports' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link NoValidImportsTrait} for fields + legacy mode features
 */
export interface NoValidImports extends WithLegacy<NoValidImportsTrait> {}
",
    "name": "NoValidImportsTraitSchema",
    "suggestedFileName": "no-valid-imports.schema.ts",
    "type": "trait",
  },
  {
    "baseName": "no-valid-imports",
    "code": "
import { computed } from '@ember/object';
import { attr } from '@unsupported/source';

export const NoValidImportsTraitExtension = {
  name: attr('string'),
  customProp: computed('name', function() { return this.name; })
};",
    "name": "NoValidImportsTraitExtension",
    "suggestedFileName": "no-valid-imports.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > supports @auditboard/warp-drive/v1/model as alternate import source when configured 1`] = `
[
  {
    "baseName": "file",
    "code": "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "baseName": "auditboard-source",
    "code": "import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { HasMany } from '@auditboard/warp-drive/v1/model';
import type { File } from 'test-app/data/resources/file.schema';

const AuditboardSourceTraitSchema = {
  'name': 'auditboard-source',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    }
  ]
} satisfies LegacyResourceSchema;

export default AuditboardSourceTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'auditboard-source' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link AuditboardSource} for fields + legacy mode features
 */
export interface AuditboardSourceTrait {
  name?: string | null;
  files?: HasMany<File>;
}

/**
 * This type represents the full set schema derived fields of
 * the 'auditboard-source' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AuditboardSourceTrait} for fields + legacy mode features
 */
export interface AuditboardSource extends WithLegacy<AuditboardSourceTrait> {}
",
    "name": "AuditboardSourceTraitSchema",
    "suggestedFileName": "auditboard-source.schema.ts",
    "type": "trait",
  },
  {
    "baseName": "auditboard-source",
    "code": "

import { computed } from '@ember/object';

export const AuditboardSourceTraitExtension = {
  customProp: computed('name', function() { return this.name; })
};",
    "name": "AuditboardSourceTraitExtension",
    "suggestedFileName": "auditboard-source.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > mixin inheritance > produces trait with extended traits when using createWithMixins > inheritance artifact metadata 1`] = `
[
  {
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "name": "FileableTraitSchema",
    "suggestedFileName": "fileable.schema.ts",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > mixin inheritance > produces trait with extended traits when using createWithMixins > inheritance trait code 1`] = `
"import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { HasMany } from '@ember-data/model';
import type { File } from 'test-app/data/resources/file.schema';
import type { BaseModelTrait } from 'test-app/data/traits/base-model.schema';
import type { TimestampTrait } from 'test-app/data/traits/timestamp.schema';

const FileableTraitSchema = {
  'name': 'fileable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'description',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file',
      'options': {
        'async': false
      }
    }
  ],
  'traits': [
    'base-model',
    'timestamp'
  ]
} satisfies LegacyResourceSchema;

export default FileableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'fileable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Fileable} for fields + legacy mode features
 */
export interface FileableTrait extends BaseModelTrait, TimestampTrait {
  description?: string | null;
  files?: HasMany<File>;
}

/**
 * This type represents the full set schema derived fields of
 * the 'fileable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link FileableTrait} for fields + legacy mode features
 */
export interface Fileable extends WithLegacy<FileableTrait> {}
"
`;

exports[`mixin-to-schema transform (artifacts) > mixin inheritance > produces trait with single extended trait > single inheritance trait code 1`] = `
"import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

import type { BaseModelTrait } from 'test-app/data/traits/base-model.schema';

const DescribableTraitSchema = {
  'name': 'describable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'description',
      'kind': 'attribute',
      'type': 'string'
    }
  ],
  'traits': [
    'base-model'
  ]
} satisfies LegacyResourceSchema;

export default DescribableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'describable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Describable} for fields + legacy mode features
 */
export interface DescribableTrait extends BaseModelTrait {
  description?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'describable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link DescribableTrait} for fields + legacy mode features
 */
export interface Describable extends WithLegacy<DescribableTrait> {}
"
`;

exports[`mixin-to-schema transform (artifacts) > mixin inheritance > produces trait without traits property when no inheritance > no inheritance trait code 1`] = `
"import type { LegacyResourceSchema } from '@warp-drive/core/types/schema/fields';

const DescribableTraitSchema = {
  'name': 'describable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'description',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default DescribableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'describable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Describable} for fields + legacy mode features
 */
export interface DescribableTrait {
  description?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'describable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link DescribableTrait} for fields + legacy mode features
 */
export interface Describable extends WithLegacy<DescribableTrait> {}
"
`;
